--- a/grrs/Cargo.toml
+++ b/grrs/Cargo.toml
@@ -5,3 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
+anyhow = "1.0"
+assert_cmd = "2.0.14"
+predicates = "3.1.0"
+assert_fs = "1.1.1"
